# lulu

./: .gitignore  CMakeLists.txt  readme.md
assets/shaders/: quad.frag  quad.vert
include/: assets.hpp  camera.hpp  input.hpp  logger.hpp  platform.hpp  rendering.hpp  scene.hpp  scripts.hpp  system.hpp
src/: assets.cpp  camera.cpp  input.cpp  logger.cpp  main.cpp  platform.cpp  rendering.cpp  scene.cpp  system.cpp
src/platform_specific/: linux.cpp
